--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,23 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
+    // Gson (Google JSON)
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    // OKHttp logging
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    // RetroFit (REST client) with ReactiveX & Gson
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.3'
-    implementation 'androidx.navigation:navigation-ui:2.3.3'
+    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
     implementation 'androidx.wear:wear:1.1.0'
 
 
