--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 
     // OKHttp logging
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // RetroFit (REST client) with ReactiveX & Gson
     def retrofit_version = "2.9.0"
