--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:name=".DeepDiveGalleryApplication"
-    android:usesCleartextTraffic="true"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme"
+    android:usesCleartextTraffic="true">
     <activity
       android:label="@string/title_activity_login"
       android:name=".controller.LoginActivity">
