--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'androidx.navigation.safeargs'
 
 static def getProperty(String filename, String property) {
     Properties properties = new Properties()
@@ -12,7 +13,7 @@ static def quoted(String value) {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
 
     compileOptions {
@@ -67,6 +68,9 @@ dependencies {
     // Gson (Google JSON)
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    //Picasso Library
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // OKHttp logging
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -80,10 +84,10 @@ dependencies {
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.4'
-    implementation 'androidx.navigation:navigation-ui:2.3.4'
-    implementation 'androidx.wear:wear:1.1.0'
 
+    // Fragments
+    implementation "androidx.navigation:navigation-fragment:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui:$navigationVersion"
 
     // Junit testing
     testImplementation 'junit:junit:4.13'
